新增支持Actuator模块